Model2D/jitfailure-dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190/error.log
/tmp/tmpta91xm8e/dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190.cpp: In member function 'virtual void dolfin::dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpta91xm8e/dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190.cpp:65:83: error: expected ')' before ';' token
   65 |           values[0] = m0/(pow(2*pi,0.5)*sigma)*exp(-pow(x[2]-s0,2)/(2*sigma*sigma);
      |                                                   ~                               ^
      |                                                                                   )
/tmp/tmpta91xm8e/dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190.cpp: In member function 'virtual double dolfin::dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190::get_property(std::string) const':
/tmp/tmpta91xm8e/dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190.cpp:77:11: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
   77 |           if (name == "m0") return m0;          if (name == "s0") return s0;          if (name == "sigma") return sigma;          if (name == "sigma_x") return sigma_x;
      |           ^~
/tmp/tmpta91xm8e/dolfin_expression_bcfc2cc6cf484903ae4e4257bd099190.cpp:77:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
   77 |           if (name == "m0") return m0;          if (name == "s0") return s0;          if (name == "sigma") return sigma;          if (name == "sigma_x") return sigma_x;
      |                                                 ^~
